--- a/src/components/product/slide-show/ProductSlideShow.css
+++ b/src/components/product/slide-show/ProductSlideShow.css
@@ -60,7 +60,7 @@
 /* ? *************************************** Navigation **************************************/
 .swiper-button-next,
 .swiper-button-prev {
-  @apply bg-gray-500 w-10 h-10 bg-opacity-60 opacity-0;
+  @apply bg-[rgba(57,60,65,.6)] w-10 h-10 opacity-0;
 }
 
 .swiper-button-next::after,
@@ -72,7 +72,9 @@
   @apply hidden;
 }
 
-.mySwiper2:hover .swiper-button-prev,
-.mySwiper2:hover .swiper-button-next {
-  opacity: 1;
+@media (min-width: 960px) {
+  .mySwiper2:hover .swiper-button-prev,
+  .mySwiper2:hover .swiper-button-next {
+    opacity: 1;
+  }
 }
