--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -205,30 +205,25 @@ input[type="search"]::-moz-search-cancel-button {
   @apply py-1 mb-2 min-[600px]:py-2 min-[600px]:mb-0 min-[600px]:mr-[14px] last:mr-0 text-gray-800 hover:text-gray-500 active:text-black transition-colors duration-[.33s] cursor-pointer select-none;
 }
 
+.search-input,
 .search-input-mobile {
-  @apply flex relative items-center justify-between px-3 w-full h-10 bg-gray-50 shadow-[inset_0_0_0_1px_#d1d5db];
-  transition: box-shadow 0.33s ease;
+  @apply flex relative items-center justify-between group-has-[:focus]:shadow-[inset_0_0_0_1px_#4b5563] group-has-[:active]:shadow-[inset_0_0_0_1px_#4b5563];
 }
 
 .search-input {
-  @apply flex relative items-center justify-between pl-2 pr-3 w-10 h-10 shadow-[inset_0_0_0_1px_transparent] hover:cursor-pointer;
+  @apply pl-2 pr-3 w-10 h-10 shadow-[inset_0_0_0_1px_transparent] hover:cursor-pointer;
   transition: width 0.5s cubic-bezier(0.5, 0, 0, 0.75),
     padding 0.5s cubic-bezier(0.5, 0, 0, 0.75), background-color 0.33s ease,
     box-shadow 0.33s ease;
 }
 
+.search-input-mobile {
+  @apply px-3 w-full h-10 bg-gray-50 shadow-[inset_0_0_0_1px_#d1d5db];
+  transition: box-shadow 0.33s ease;
+}
+
 .search-input.open {
   @apply w-full pl-3 shadow-[inset_0_0_0_1px_#d1d5db] cursor-auto;
-}
-
-.search-input.open:active,
-.search-input-mobile:active {
-  @apply shadow-[inset_0_0_0_1px_#4b5563];
-}
-
-.search-input.open.focused,
-.search-input-mobile.focused {
-  @apply shadow-[inset_0_0_0_1px_#4b5563];
 }
 
 .search-input-cancel-button {
